Hidden scrollbar fixed

--- a/rspp/app/assets/stylesheets/vertical_navbar.scss
+++ b/rspp/app/assets/stylesheets/vertical_navbar.scss
@@ -27,10 +27,9 @@
 
         .hidden-scroll {
             position: absolute;
-            width: calc(100% + 20px);
+            width: calc(100% + 10px);
             height: 100%;
-            overflow-y: scroll;
-            padding-right: 10px;
+            overflow-y: auto;
         }
 
         .join-badge {
@@ -142,7 +141,7 @@ and (orientation : landscape) {
 
         .vertical-navbar {
             .hidden-scroll {
-                padding-right: 20px;
+                padding-right: 10px;
             }
         }
     }
